5k documents parsed and merged

--- a/ModuleB/ModuleB.ipynb
+++ b/ModuleB/ModuleB.ipynb
@@ -2,6 +2,61 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fri Feb 13 18:42:43 2026       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 576.88                 Driver Version: 576.88         CUDA Version: 12.9     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                  Driver-Model | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  NVIDIA GeForce RTX 5060 Ti   WDDM  |   00000000:01:00.0  On |                  N/A |\n",
+            "|  0%   37C    P8              4W /  180W |    1215MiB /  16311MiB |      1%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|    0   N/A  N/A            2268    C+G   ...0.3719.115\\msedgewebview2.exe      N/A      |\n",
+            "|    0   N/A  N/A            7368    C+G   ...t\\Edge\\Application\\msedge.exe      N/A      |\n",
+            "|    0   N/A  N/A            7400    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
+            "|    0   N/A  N/A            8044    C+G   ...em32\\ApplicationFrameHost.exe      N/A      |\n",
+            "|    0   N/A  N/A            8056    C+G   ...xyewy\\ShellExperienceHost.exe      N/A      |\n",
+            "|    0   N/A  N/A            8684    C+G   C:\\Windows\\explorer.exe               N/A      |\n",
+            "|    0   N/A  N/A            9140    C+G   ...2txyewy\\CrossDeviceResume.exe      N/A      |\n",
+            "|    0   N/A  N/A            9864    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
+            "|    0   N/A  N/A           10724    C+G   ...y\\StartMenuExperienceHost.exe      N/A      |\n",
+            "|    0   N/A  N/A           11208    C+G   ..._cw5n1h2txyewy\\SearchHost.exe      N/A      |\n",
+            "|    0   N/A  N/A           11252    C+G   ...ntrolPanel\\SystemSettings.exe      N/A      |\n",
+            "|    0   N/A  N/A           12820    C+G   ...Chrome\\Application\\chrome.exe      N/A      |\n",
+            "|    0   N/A  N/A           12872    C+G   ...yb3d8bbwe\\WindowsTerminal.exe      N/A      |\n",
+            "|    0   N/A  N/A           14640    C+G   ...1g1gvanyjgm\\WhatsApp.Root.exe      N/A      |\n",
+            "|    0   N/A  N/A           15292    C+G   ...0.3719.115\\msedgewebview2.exe      N/A      |\n",
+            "|    0   N/A  N/A           17624    C+G   ...5n1h2txyewy\\TextInputHost.exe      N/A      |\n",
+            "|    0   N/A  N/A           18576    C+G   ...Chrome\\Application\\chrome.exe      N/A      |\n",
+            "|    0   N/A  N/A           18648    C+G   ...\\cef.win64\\steamwebhelper.exe      N/A      |\n",
+            "|    0   N/A  N/A           21636    C+G   ...gs\\Microsoft VS Code\\Code.exe      N/A      |\n",
+            "|    0   N/A  N/A           27440    C+G   ...indows\\System32\\ShellHost.exe      N/A      |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
+          ]
+        }
+      ],
+      "source": [
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -1464,7 +1519,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
