--- a/ModuleD/Module_D.ipynb
+++ b/ModuleD/Module_D.ipynb
@@ -88,6 +88,137 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load JSON results\n",
+        "print(\"=\"*70)\n",
+        "print(\"GENERATING LABELING TEMPLATE FROM YOUR JSON\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "try:\n",
+        "    with open(RESULTS_FILE, 'r', encoding='utf-8') as f:\n",
+        "        results = json.load(f)\n",
+        "    print(f\"✓ Loaded {len(results)} queries from: {RESULTS_FILE}\")\n",
+        "except FileNotFoundError:\n",
+        "    print(f\" File not found: {RESULTS_FILE}\")\n",
+        "    print(\"   Please upload your Module C results JSON file.\")\n",
+        "    raise\n",
+        "\n",
+        "# Extract documents for labeling\n",
+        "rows = []\n",
+        "\n",
+        "for query_data in results:\n",
+        "    query = query_data['query']\n",
+        "    lang = query_data.get('language', 'unknown')\n",
+        "    \n",
+        "    print(f\"\\nProcessing query: '{query}' ({lang})\")\n",
+        "    \n",
+        "    # Dictionary to store unique documents\n",
+        "    all_docs = {}\n",
+        "    \n",
+        "    # Check all 4 models\n",
+        "    model_names = ['bm25_results', 'fuzzy_results', 'semantic_results', 'hybrid_results']\n",
+        "    \n",
+        "    for model_name in model_names:\n",
+        "        if model_name not in query_data:\n",
+        "            continue\n",
+        "        \n",
+        "        model_results = query_data[model_name]\n",
+        "        \n",
+        "        # Get top 10 documents from this model\n",
+        "        for doc in model_results[:10]:\n",
+        "            # Use URL as unique identifier (fallback to title)\n",
+        "            doc_id = doc.get('url', doc.get('title', ''))\n",
+        "            \n",
+        "            # Skip if already added\n",
+        "            if doc_id in all_docs:\n",
+        "                continue\n",
+        "            \n",
+        "            # Store document info\n",
+        "            all_docs[doc_id] = {\n",
+        "                'title': doc.get('title', 'N/A'),\n",
+        "                'body': doc.get('body', ''),\n",
+        "                'url': doc.get('url', ''),\n",
+        "                'score': doc.get('score', 0)\n",
+        "            }\n",
+        "    \n",
+        "    print(f\"  Found {len(all_docs)} unique documents\")\n",
+        "    \n",
+        "    # Create rows for labeling\n",
+        "    for doc_id, doc_info in all_docs.items():\n",
+        "        # Take first 150 characters as snippet\n",
+        "        snippet = doc_info['body'][:150] if doc_info['body'] else ''\n",
+        "        \n",
+        "        rows.append({\n",
+        "            'query': query,\n",
+        "            'query_language': lang,\n",
+        "            'doc_id': doc_id,\n",
+        "            'doc_title': doc_info['title'],\n",
+        "            'doc_snippet': snippet,\n",
+        "            'doc_url': doc_info['url'],\n",
+        "            'relevant': '',  # TO BE FILLED MANUALLY\n",
+        "            'annotator': '',  # TO BE FILLED MANUALLY\n",
+        "            'notes': ''  # Optional\n",
+        "        })\n",
+        "\n",
+        "# Create DataFrame and save\n",
+        "df_template = pd.DataFrame(rows)\n",
+        "df_template.to_csv('relevance_labels_template.csv', index=False, encoding='utf-8-sig')\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"✓ TEMPLATE GENERATED SUCCESSFULLY\")\n",
+        "print(\"=\"*70)\n",
+        "print(f\"Output file: relevance_labels_template.csv\")\n",
+        "print(f\"Total documents to label: {len(rows)}\")\n",
+        "print(\"\\nBreakdown by query:\")\n",
+        "print(df_template.groupby('query').size())\n",
+        "\n",
+        "# Show sample\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"SAMPLE ROWS (first 5):\")\n",
+        "print(\"=\"*70)\n",
+        "display(df_template[['query', 'doc_title', 'doc_snippet', 'relevant', 'annotator']].head())\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"NEXT STEPS: MANUAL LABELING\")\n",
+        "print(\"=\"*70)\n",
+        "print(f\"\"\"\n",
+        "1. DOWNLOAD the file: relevance_labels_template.csv\n",
+        "\n",
+        "2. OPEN in one of these (to display Bangla correctly):\n",
+        "   • Google Sheets (recommended): File → Import → Upload CSV → Select UTF-8\n",
+        "   • LibreOffice Calc (free): Open → Select UTF-8 encoding\n",
+        "   • Excel: Data → From Text/CSV → Select UTF-8 encoding\n",
+        "\n",
+        "3. FOR EACH ROW:\n",
+        "   - Read the query (what user searched for)\n",
+        "   - Read doc_title and doc_snippet\n",
+        "   - Ask: \"Is this document relevant to the query?\"\n",
+        "   - Fill 'relevant' column with 'yes' or 'no'\n",
+        "   - Fill 'annotator' column with your name\n",
+        "\n",
+        "4. EXAMPLES:\n",
+        "   Query: \"education system\" → Doc: \"Education policy 2010...\" → relevant: yes\n",
+        "   Query: \"education system\" → Doc: \"Cricket match...\" → relevant: no\n",
+        "   Query: \"শিক্ষা\" → Doc: \"শিক্ষার মানোন্নয়ন...\" → relevant: yes\n",
+        "\n",
+        "5. SAVE AS: relevance_labels.csv (remove \"_template\" from filename)\n",
+        "\n",
+        "6. UPLOAD the completed file and continue to next cells\n",
+        "\n",
+        "TIME ESTIMATE:\n",
+        "- Solo: 2-3 hours for {len(rows)} documents\n",
+        "- Team (4 people): 30-40 minutes each (~{len(rows)//4} docs per person)\n",
+        "\n",
+        "TIP: When unsure, mark as 'yes' (be generous with relevance)\n",
+        "\"\"\")\n",
+        "print(\"=\"*70)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 2,
       "metadata": {
         "colab": {
