--- a/ModuleC/ModuleC.ipynb
+++ b/ModuleC/ModuleC.ipynb
@@ -658,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -749,13 +749,13 @@
         "    print(\"=\"*70)\n",
         "\n",
         "    # BM25 Results\n",
-        "    print(\"\\n📊 BM25 Results:\")\n",
+        "    print(\"\\n BM25 Results:\")\n",
         "    bm25_results = index.search(query, lang=lang, topk=5)\n",
         "    for i, doc in enumerate(bm25_results, 1):\n",
         "        print(f\"  {i}. {doc.get('title', 'N/A')[:60]} (Score: {doc['score']:.4f})\")\n",
         "\n",
         "    # Semantic Results\n",
-        "    print(\"\\n🧠 Semantic Results:\")\n",
+        "    print(\"\\n Semantic Results:\")\n",
         "    semantic_results = semantic_search(query, index.documents, topk=5)\n",
         "    for i, doc in enumerate(semantic_results, 1):\n",
         "        print(f\"  {i}. {doc.get('title', 'N/A')[:60]} (Score: {doc['score']:.4f})\")\n",
@@ -793,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -855,7 +855,7 @@
         "print(\"✓ Fuzzy search ready!\")\n",
         "\n",
         "# Test it\n",
-        "print(\"\\n🔍 Fuzzy Search Test:\")\n",
+        "print(\"\\n Fuzzy Search Test:\")\n",
         "fuzzy_results = fuzzy_search(\"education\", index.documents, topk=5)\n",
         "for i, doc in enumerate(fuzzy_results, 1):\n",
         "    print(f\"{i}. {doc.get('title', 'N/A')[:60]} (Score: {doc['score']:.4f})\")\n"
@@ -984,7 +984,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1054,7 +1054,7 @@
         "    return results\n",
         "\n",
         "# Test hybrid\n",
-        "print(\"🔀 Hybrid Search (BM25 + Semantic + Fuzzy)\")\n",
+        "print(\" Hybrid Search (BM25 + Semantic + Fuzzy)\")\n",
         "hybrid_results = hybrid_search(\"education\", index, lang='en', topk=5)\n",
         "for i, doc in enumerate(hybrid_results, 1):\n",
         "    print(f\"{i}. {doc.get('title', 'N/A')[:60]} (Score: {doc['score']:.4f})\")\n"
